--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # Custom
-/[Aa]ssets/TextMesh Pro
+Cosmo Letters Game Project/[Aa]ssets/TextMesh Pro
+Cosmo Letters Game Project/[Aa]ssets/TextMesh Pro.meta
